--- a/index.html
+++ b/index.html
@@ -9,64 +9,73 @@
 </head>
 
 <body>
-    <div class="top">
-        <div class="container top-box">
-            <div class="header">
-                <a href="index.html"><img src="img/logo.svg" alt="main page"></a>
-                <a href="contacts.html"><img src="img/contacts.svg" alt="contacts"></a>
+    <div class="wrapper">
+        <div class="top-content">
+            <div class="top top-main">
+                <div class="container top-box">
+                    <div class="header">
+                        <a href="index.html"><img src="img/logo.svg" alt="main page"></a>
+                        <a href="contacts.html"><img src="img/contacts.svg" alt="contacts"></a>
+                    </div>
+                    <div class="top-info">
+                        <h1 class="top_heading">New Automation Tool for Your</h1>
+                        <p class="text top_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo illo
+                            libero
+                            aperiam
+                            praesentium cum aliquid, nihil accusantium commodi officia eos repudiandae?</p>
+                        <a class="top_button" href="#">See Our Project</a>
+                    </div>
+                </div>
             </div>
-            <div class="top-info">
-                <h1 class="top_heading">New Automation Tool for Your</h1>
-                <p class="text top_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo illo libero
-                    aperiam
-                    praesentium cum aliquid, nihil accusantium commodi officia eos repudiandae?</p>
-                <a class="top_button" href="#">See Our Project</a>
-            </div>
-        </div>
-    </div>
 
-    <div class="what-we-do container">
-        <h3 class="heading">What we do to help our client grow in digital era</h3>
-        <div class="card-box ">
-            <div class="card">
-                <img class="card_img" src="img/men-1.png" alt="men">
-                <h4 class="heading-mini">Make Your business To Be Better Famous In Internet</h4>
-                <p class="text card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. </p>
-                <a class="card-link" href="#">Learn more <img src="img\vector.png" alt="vector"></a>
+            <div class="what-we-do container">
+                <h3 class="heading">What we do to help our client grow in digital era</h3>
+                <div class="card-box ">
+                    <div class="card">
+                        <img class="card_img" src="img/men-1.png" alt="men">
+                        <h4 class="heading-mini">Make Your business To Be Better Famous In Internet</h4>
+                        <p class="text card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. </p>
+                        <a class="card-link" href="#">Learn more <img src="img\vector.png" alt="vector"></a>
+                    </div>
+                    <div class="card">
+                        <img class="card_img" src="img/gingit-2.png" alt="gingit girl">
+                        <h4 class="heading-mini">Bring Technology To Your Home</h4>
+                        <p class="text card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. </p>
+                        <a class="card-link" href="#">Learn more <img src="img\vector.png" alt="vector"></a>
+                    </div>
+                    <div class="card">
+                        <img class="card_img" src="img/leptop-3.png" alt="girl with leptop">
+                        <h4 class="heading-mini">Build Your Digital Product That Suitable For Your Need</h4>
+                        <p class="text card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. </p>
+                        <a class="card-link" href="#">Learn more <img src="img\vector.png" alt="vector"></a>
+                    </div>
+                </div>
             </div>
-            <div class="card">
-                <img class="card_img" src="img/gingit-2.png" alt="gingit girl">   
-                <h4 class="heading-mini">Bring Technology To Your Home</h4>
-                <p class="text card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. </p>
-                <a class="card-link" href="#">Learn more <img src="img\vector.png" alt="vector"></a>
-            </div>
-            <div class="card">
-                <img class="card_img" src="img/leptop-3.png" alt="girl with leptop">
-                <h4 class="heading-mini">Build Your Digital Product That Suitable For Your Need</h4>
-                <p class="text card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. </p>
-                <a class="card-link" href="#">Learn more <img src="img\vector.png" alt="vector"></a>
-            </div>
-        </div>
-    </div>
 
-    <div class="project container">
-        <h3 class="heading project-heading">Our Finished Project</h3>
-        <p class="text project-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> 
-        <div class="project_item">
-            <img src="img/background/smart-home.png" alt="smart-home" class="project_img">
-            <p class="project_text">Smart Home Installation</p>
-        </div>
-        <div class="project_parent">
-            <div class="sparklite">
-                <img src="img/background/sparklite.png" alt="sparklite" class="project_img">
-                <p class="sparklite-text">Sparklite App</p>
-            </div>
-            <div class="car">
-                <img src="img/background/car.png" alt="car" class="project_img">
-                <p class="car-text">Car-Rapetition App</p>
+            <div class="project container">
+                <h3 class="heading project-heading">Our Finished Project</h3>
+                <p class="text project-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <div class="project_item">
+                    <img src="img/background/smart-home.png" alt="smart-home" class="project_img">
+                    <p class="project-text_min">Smart Home Installation</p>
+                </div>
+                <div class="project_parent">
+                    <div class="sparklite">
+                        <img src="img/background/sparklite.png" alt="sparklite" class="project_img">
+                        <p class="sparklite-text">Sparklite App</p>
+                    </div>
+                    <div class="car">
+                        <img src="img/background/car.png" alt="car" class="project_img">
+                        <p class="car-text">Car-Rapetition App</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -74,25 +83,29 @@
     <div class="footer">
         <div class="container">
             <div class="footer-woek">
-                <div class="footer-woek_block">
+                <div class="footer-woek_block footer-woek_block-heading">
                     <h3 class="footer-woek_heading">Interested to woek with our team?</h3>
-                    <p class="text footer-woek_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                    <p class="text footer-woek_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
                     </p>
                 </div>
                 <div class="footer-woek_block">
-                   <a href="#" class="footer-woek_link">Let’s Talk
-                </a> 
-                </div>      
+                    <button><a href="#" class="footer-woek_button">Let’s Talk
+                    </a></button>
+                </div>
             </div>
         </div>
         <hr>
         <div class="footer-contacts">
             <div class="container">
-                <ol class="list">
-                    <li class="text footer-contacts_text">Ivanov Sergey Vasilevich (work)</li>
-                    <li class="text footer-contacts_text"><a class="text footer-contacts_text none-decoration" href="#">08654864351</a></li> 
-                    <li class="text footer-contacts_text"><a class="text footer-contacts_text none-decoration" href="#">115sergey@gmail.com</a></li>               
-                </ol>
+                <ul class="list">
+                    <li class="text footer-contacts_text smart">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </li>
+                    <li class="footer-contacts_text smart"><a class="footer-contacts_text none-decoration "
+                        href="#">+7-812-7313-4321</a></li>
+                    <li class="footer-contacts_text smart"><a class="footer-contacts_text none-decoration"
+                            href="#">hello.site@gmail.com</a></li>
+                </ul>
             </div>
             <div class="footer-rights container">
                 <p class="text footer-rights_text">2021 All rights reserved.</p>
